--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@ body{
 	margin: 0;
 	padding: 0;
 }
+
+header{
+	display: flex;
+	background: #481d1da0;
+	height: 150px;
+	justify-content: center;
+	align-items: center;
+}
+
