--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ header{
 	align-items: center;
 }
 
+nav{
+	display: flex;
+	gap: 30px;
+}
+
+button{
+	padding: 10px;
+	width: 100px;
+	border-radius: 5px;
+	background-color: #3d1717;
+	color: #fff;
+}
