--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ button{
 #content{
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-direction: column;
 	background: #481d1de4;
 	width:50%;
@@ -40,7 +39,7 @@ button{
 }
 
 #content h1, p {
-	padding: 10px 10px;
+	padding: 20px 20px;
 }
 
 main{
@@ -49,3 +48,9 @@ main{
 	align-items: center;
 	height: 100%;
 }
+
+.size{
+	height:100px;
+	width:100px;
+}
+
