--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@ body{
 	margin: 0;
 	padding: 0;
 	background-image: url(./assets/londonRest.png);
-	height: 100vh;
 	overflow: none;
+	background-size: cover;
+	background-repeat: no-repeat;
+	
 	
 }
 
@@ -29,16 +31,22 @@ button{
 }
 
 #content{
+	margin-top: 20px;
 	display: flex;
-	align-items: center;
+	align-items: left;
+	background-image: cover;
 	flex-direction: column;
 	background: #481d1de4;
 	width:50%;
-	height: 50%;
+	height: 80%;
 	color: white;
+	padding: 20px 20px;
+	gap: 25px;
+
+
 }
 
-#content h1, p {
+#content h1, p img{
 	padding: 20px 20px;
 }
 
@@ -54,3 +62,10 @@ main{
 	width:100px;
 }
 
+
+.menuBox{
+	display: flex;
+	justify-content: left;
+	align-items: left;
+
+}
